--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <head></head>
 <body>
   <h1>Hello World!</h1>
+  <h2>About</h2>
+  <p>This is my personal website where I am learning more about fullstack and a place where I will insert my projects.</p>
+  <p>My name is Rafael, I am graduated in Mechanical Engineering but I love the pc's World.</p>
 </body>
